--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SqliteConn": "Data source=Inventory.db"
+  },
   "AllowedHosts": "*"
 }
